# automaton

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/abilities/: abilities.rs  delete.rs  gifdrop.rs  mention.rs  mod.rs  resource.rs  student.rs
src/internals/: config.rs  instance.rs  listener.rs  mod.rs
src/internals/parser/: github.rs
